@@ -5,3 +5,5 @@
  * Student 2: 	Jimil Suchitkumar Prajapati - 40205477
  * Student 3:   Anitha Ramakrishnan			- 40231724
 
+In Eclipse, add this line to Configurations:
+--module-path "/your_path/javafx-sdk-17.0.6/lib" --add-modules=javafx.controls,javafx.fxml
